<?xml version="1.0"?>
<package format="2">
  <name>om_modbus_master</name>
  <version>1.0.4</version>
  
  <description>
    The Modbus RTU Node package
  </description>
  
  <maintainer email="t_takahashi@orientalmotor.co.jp">Taku Takahashi</maintainer>
  <license>BSD</license>
  <author>Taku Takahashi</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <!-- add =-->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
